# efr32mg22-pac

./: Cargo.toml  README.md  build.rs  device.x  memory.x
src/: cmu_ns.rs  cryptoacc_ns_pkctrl.rs  cryptoacc_ns_rngctrl.rs  dcdc_s.rs  devinfo.rs  emu_ns.rs  euart0_s.rs  gpio_ns.rs  hfxo0_ns.rs  iadc0_s.rs  ldmaxbar_s.rs  letimer0_s.rs  lib.rs  msc_ns.rs  pdm_s.rs  prortc_ns.rs  prs_ns.rs  rtcc_s.rs  smu_s.rs  smu_s_cfgns.rs  syscfg_s.rs
src/burtc_ns/: cfg.rs  syncbusy.rs
src/burtc_s/: en.rs
src/cmu_ns/: calctrl.rs  clken0.rs  clken1.rs  em01grpaclkctrl.rs  euart0clkctrl.rs
src/cmu_s/: cryptoaccclkctrl.rs  em01grpbclkctrl.rs  exportclkctrl.rs  iadcclkctrl.rs  prortcclkctrl.rs  rtccclkctrl.rs
src/cryptoacc_ns/: ba413_hw_cfg.rs  ba419_hw_cfg.rs  incl_ips_hw_cfg.rs
src/cryptoacc_ns_pkctrl/: pkctrl.rs  timer.rs
src/cryptoacc_ns_rngctrl/: fifodepth.rs  fifolevel.rs  fifothresh.rs  key3.rs  rngstatus.rs  swofftmrval.rs
src/cryptoacc_s/: ba411e_hw_cfg_1.rs  fetchlen.rs  if_clr.rs
src/cryptoacc_s_pkctrl/: command.rs  pkstatus.rs  pointer.rs  version.rs
src/cryptoacc_s_rngctrl/: ais31conf0.rs  ais31conf1.rs  ais31conf2.rs  ais31status.rs  clkdiv.rs  initwaitval.rs  key0.rs  key1.rs  key2.rs  rngctrl.rs  testdata.rs
src/dcdc_ns/: em23ctrl0.rs  if_.rs  ipversion.rs  status.rs
src/dcdc_s/: ctrl.rs  en.rs  ien.rs  lock.rs
src/devinfo/: info.rs  moduleinfo.rs  part.rs  swcapa0.rs  swcapa1.rs
src/dpll0_s/: en.rs
src/emu_ns/: cmd.rs  rstctrl.rs
src/emu_s/: pd1paretctrl.rs  rstcause.rs
src/euart0_ns/: en.rs  framecfg.rs  ien.rs  if_.rs  rxdata.rs  (+2 more)
(+240 files in other folders)
