[package]
name = "efr32mg22-pac"
version = "0.1.1"
edition = "2024"

categories = ["embedded", "no-std"]
description = "Peripheral Access Crate for the EFR32MG22 (Mighty Gecko)"
keywords = ["arm", "cortex-m", "efm32", "efr32", "efr32mg22"]

authors = ["Bnyro <bnyro@tutanota.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/bnyro/efr32mg22-pac"
repository = "https://github.com/bnyro/efr32mg22-pac"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]
